--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,10 +8,12 @@
             <p>Hi there!</p>
             <p>It works!</p>
         </div>
+        {% for post in posts %}
         <div>
-          <p>published : 2016.08.07, 22:00</p>
-          <h2><a href="">My First post</a></h2>
-          <p>Python is very useful programming language! Together Do Programming!</p>
+          <p> published : {{ post.published_date }}</p>
+          <h1><a href="">{{ post.title }}</a></h1>
+          <p>{{ post.text|linebreaksbr }}</p>
         </div>
+        {% endfor %}
     </body>
 </html>
